# aerial-linux

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/: overlay.lua
packaging/: 80-aerial-linux.preset  aerial-linux.service  config.example.toml
packaging/flatpak/: aerial-linux-flatpak.service  io.github.aerialscreensaver.AerialLinux.desktop  io.github.aerialscreensaver.AerialLinux.metainfo.xml  io.github.aerialscreensaver.AerialLinux.yml
src/: cache.rs  catalog.rs  config.rs  daemon.rs  main.rs  manifest.rs  overlay.rs  player.rs  selector.rs  source.rs
