[package]
name = "aerial-linux"
version = "0.1.0"
edition = "2021"
description = "Apple TV Aerial screensaver for Ubuntu/Linux (GNOME Wayland, idle-display). Phase 1: catalog + cache."
license = "MIT"
repository = "https://github.com/AerialScreensaver/Aerial"
rust-version = "1.74"

[[bin]]
name = "aerial-linux"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
directories = "5"
anyhow = "1"
tar = "0.4"
flate2 = "1"
md-5 = "0.10"
hex = "0.4"
indicatif = "0.17"

[profile.release]
lto = true
strip = true
