[package]
name = "aerial-linux"
version = "0.1.0"
edition = "2021"
description = "Apple TV Aerial screensaver for Ubuntu/Linux (GNOME Wayland, idle-display). Phase 1: catalog + cache."
license = "MIT"
repository = "https://github.com/AerialScreensaver/Aerial"
rust-version = "1.74"

[[bin]]
name = "aerial-linux"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "stream", "json"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
directories = "5"
anyhow = "1"
tar = "0.4"
flate2 = "1"
md-5 = "0.10"
hex = "0.4"
indicatif = "0.17"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[profile.release]
lto = true
strip = true

[package.metadata.deb]
maintainer = "Jeff Hobbs <jhobbs@advancelocal.com>"
copyright = "2026 Aerial contributors. MIT licensed."
license-file = ["LICENSE", "0"]
section = "x11"
priority = "optional"
# $auto pulls shared-library deps (libc, …) via dpkg-shlibdeps; mpv is the
# runtime player we drive. mesa-vulkan-drivers gives the Wayland Vulkan path on
# Intel/AMD (NVIDIA provides its own via the standard driver packages).
depends = "$auto, mpv"
recommends = "mesa-vulkan-drivers"
extended-description = """\
Plays Apple TV's aerial videos as a screensaver on GNOME/Wayland. A background \
daemon watches the session idle time (org.gnome.Mutter.IdleMonitor) and, after \
a configurable idle timeout, plays the aerials fullscreen — stopping the moment \
you touch the keyboard or mouse. Optional clock, weather, and now-playing \
overlays. Videos are streamed or cached from Apple's CDN.\
"""
assets = [
    ["target/release/aerial-linux", "usr/bin/", "755"],
    ["assets/overlay.lua", "usr/share/aerial-linux/overlay.lua", "644"],
    ["packaging/aerial-linux.service", "usr/lib/systemd/user/aerial-linux.service", "644"],
    ["packaging/80-aerial-linux.preset", "usr/lib/systemd/user-preset/80-aerial-linux.preset", "644"],
    ["packaging/config.example.toml", "usr/share/doc/aerial-linux/config.example.toml", "644"],
    ["README.md", "usr/share/doc/aerial-linux/README.md", "644"],
]
